# COS214_Project

./: README.md  main.cpp
Code/: AirFactory.cpp  AirFactory.h  AirTerrain.cpp  AirTerrain.h  AirUnit.cpp  AirUnit.h  AirVehicle.cpp  AirVehicle.h  AmmoFactory.cpp  AmmoFactory.h  AmmoSupply.cpp  AmmoSupply.h  AmmoTransporter.cpp  AmmoTransporter.h  Army.cpp  Army.h  ArmyBuilder.cpp  ArmyBuilder.h  ArmyComponent.h  ArmyDirector.cpp  ArmyDirector.h  ArmyStrategy.cpp  ArmyStrategy.h  AttackTransport.cpp  AttackTransport.h  Average.cpp  Average.h  Battalion.cpp  Battalion.h  BattleStatistics.cpp  BattleStatistics.h  ChangeStrategy.cpp  ChangeStrategy.h  Civilian.cpp  Civilian.h  Command.cpp  Command.h  Corresponder.cpp  Corresponder.h  Country.cpp  (+83 more)
Doxygen_documentation/: Doxyfile  Doxyfile.bak  customHeader.html  customStylesheet.css  stylesheet.css.bak
Doxygen_documentation/html/: _air_factory_8cpp.html  _air_factory_8h.html  _air_factory_8h_source.html  _air_terrain_8cpp.html  _air_terrain_8h.html  _air_terrain_8h_source.html  _air_unit_8cpp.html  _air_unit_8h.html  _air_unit_8h_source.html  _air_vehicle_8cpp.html  _air_vehicle_8h.html  _air_vehicle_8h_source.html  _ammo_factory_8cpp.html  _ammo_factory_8h.html  _ammo_factory_8h_source.html  _ammo_supply_8cpp.html  _ammo_supply_8h.html  _ammo_supply_8h_source.html  _ammo_transporter_8cpp.html  _ammo_transporter_8h.html  _ammo_transporter_8h_source.html  _army_8cpp.html  _army_8h.html  _army_8h_source.html  _army_builder_8cpp.html  _army_builder_8h.html  _army_builder_8h_source.html  _army_component_8h.html  _army_component_8h_source.html  _army_director_8cpp.html  _army_director_8h.html  _army_director_8h_source.html  _army_strategy_8cpp.html  _army_strategy_8h.html  _army_strategy_8h_source.html  _attack_transport_8cpp.html  _attack_transport_8h.html  _average_8cpp.html  (+392 more)
Report/: ProjectClassDiagramv22 (Final).vpp
Testing/: ArmyBuilder_unittests.cpp  ArmyComponent_unittests.cpp  ArmyStrategy_unittests.cpp  CMakeCache.txt  CMakeLists.txt  EconomicState_unittests.cpp  Makefile  NonCombatEntity_unittests.cpp  SupplyProduct_unittests.cpp  Transport_unittests.cpp  Transporter_unittests.cpp  WarTheatre_unittests.cpp  cmake_install.cmake  unittests.cpp
Thomas Testing/: CMakeCache.txt  CMakeLists.txt  Makefile  WarPhase_unittests.cpp  cmake_install.cmake  runTests  unittests.cpp
(+330 files in other folders)
